# template-nextjs

./: CMakeLists.txt
.github/workflows/: cpp.yml
src/: lib.cpp
